# RecipeParse

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.cpp  parser.h
dlls/: CMakeLists.txt  eda.cpp  eda.h
